fix(widget): wrap icons in profile widget

--- a/include/style/widget.styl
+++ b/include/style/widget.styl
@@ -25,3 +25,6 @@
         .tag:last-child
             background: $light-grey
             color: $white-invert
+
+.level.is-multiline
+    flex-wrap: wrap
